# PicoSDEmu

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md
docs/: FEATURE_SPECIFICATION.md  cdc_text_protocol.md  hardware_spi_target.md  references.md  second_pico_spi_exerciser.md
firmware/: CMakeLists.txt
firmware/include/picosd/: board_config.hpp  cdc_shell.hpp  spi_capture.hpp
firmware/pio/: sd_spi_capture.pio  sd_spi_transmit.pio
firmware/src/: cdc_shell.cpp  main.cpp  spi_capture.cpp
host/terminal/: CMakeLists.txt
host/terminal/src/: cdc_transport.cpp  cdc_transport.hpp  image_file.cpp  image_file.hpp  main.cpp  posix_cdc_transport.cpp  serve_options.cpp  serve_options.hpp  session_dispatcher.cpp  session_dispatcher.hpp  session_runner.cpp  session_runner.hpp  windows_cdc_transport.cpp
shared/protocol/: CMakeLists.txt
shared/protocol/include/picosd/protocol/: codec.hpp  crc.hpp  sd_card_state.hpp  sd_command.hpp  sd_model.hpp  sd_registers.hpp  sd_spi_card_engine.hpp  sd_spi_command_framer.hpp  sd_spi_data_framer.hpp  text_line.hpp  version.hpp
shared/protocol/src/: codec.cpp  crc.cpp  sd_card_state.cpp  sd_command.cpp  sd_model.cpp  sd_registers.cpp  sd_spi_card_engine.cpp  sd_spi_command_framer.cpp  sd_spi_data_framer.cpp  text_line.cpp
tests/: CMakeLists.txt  cdc_transport_tests.cpp  codec_tests.cpp  crc_tests.cpp  image_file_tests.cpp  protocol_version_tests.cpp  sd_card_state_tests.cpp  sd_command_tests.cpp  sd_model_tests.cpp  sd_registers_tests.cpp  sd_spi_card_engine_tests.cpp  sd_spi_command_framer_tests.cpp  sd_spi_data_framer_tests.cpp  serve_options_tests.cpp  session_dispatcher_tests.cpp  session_runner_tests.cpp  text_line_tests.cpp
